...
                } else if keyWindow?.identifier == AppWindowIdentifier.manageConnections {
                    NotificationCenter.default.post(name: .toggleManageConnectionsSidebar, object: nil)
                } else {
                    NSApp?.sendAction(#selector(NSSplitViewController.toggleSidebar(_:)), to: nil, from: nil)
                }
            } label: {
                Label("Toggle Sidebar", systemImage: "sidebar.left")
            }
            .keyboardShortcut("s", modifiers: [.command, .control])

            Button {
                appState.toggleInspector()
            } label: {
...
